# Nife

./: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  config.h.in  configure  configure.ac
src/: Makefile.am  Makefile.in  benchm.nif  conf.h  debug.c  debug.h  dev.c  dev.h  err.c  err.h  foncs.c  foncs.h  gplot.c  gplot.h  help.c  help.h  histo.c  histo.h  i2c.c  i2c.h  lib.c  lib.h  libmath.c  libmath.h  libmathc99.c  mth.c  mth.h  net.c  net.h  nife.c  nife.h  nife.hlp  scs.c  scs.h  stackC.c  stackC.h  stackF.c  stackF.h  stackL.c  stackL.h  (+7 more)
src/ex/: Nblf.txt  NifeDebugTerms  gp.nif  rpc.nif  rpc2.nif  testi2c.nif  toto.nblf
