################################
# Makefile.am for nife project    #
################################

bin_PROGRAMS = nife
nife_SOURCES = nife.c nife.h conf.h \
             mth.c mth.h \
             err.c err.h \
             histo.c histo.h \
             lib.c lib.h \
             foncs.c foncs.h \
             stackN.c stackN.h \
             stackL.c stackL.h \
             stackC.c stackC.h \
             stackF.c stackF.h \
             stackV.c stackV.h \
             tasks.c tasks.h \
             libmath.c libmath.h \
             libmathc99.c \
             help.c help.h \
             dev.c dev.h \
             net.c net.h \
             gplot.c gplot.h \
             scs.c scs.h \
             debug.c debug.h
# nife_LDADD = libm.a

